<resources>
    <string name="app_name">Project</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">log in</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="device_added">Device Added</string>
    <string name="numberic">8</string>
    <string name="numbericOne">1</string>
    <string name="appliances_list">Appliances list</string>
    <string name="temp">Temp</string>
    <string name="air">Air</string>
    <string name="humidity">Humidity</string>
    <string name="total_temp">8</string>
    <string name="weekly">Weekly</string>
    <string name="annual">Annual</string>
    <string name="monthly">Monthly</string>
    <string name="analysis">Analysis</string>
    <string name="temperature">Temperature</string>
    <string name="average">Average:</string>
    <string name="personal">Personal</string>
    <string name="map">Map</string>
    <string name="devices">Devices</string>
    <string name="asset_information">Asset information</string>
    <string name="water">Water</string>
    <string name="change">Change Information</string>
    <string name="processing">Processing...</string>
    <string name="had_account">Had Account ? </string>
    <string name="title">Title</string>
    <string name="name2">Name</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="age2">Age</string>
    <string name="subtitle">Subtitle</string>
    <string name="location_detail">Location detail</string>
    <string name="weather_detail">Weather detail</string>
    <string name="update">Update</string>
    <string name="location">Location</string>
    <string name="view_more">View more</string>
    <string name="device_information">Device Information</string>
    <string name="asset_name">Asset name</string>
    <string name="area_name">Area name</string>
    <string name="last_update">Last Update</string>
    <string name="air_speed">Air Speed</string>
    <string name="name">Name:</string>
    <string name="back">Back</string>
    <string name="age">Age:</string>
</resources>