<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp450"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_marginTop="@dimen/dp12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:id="@+id/texChange"
        android:layout_gravity="center"
        android:textSize="@dimen/sp24"
        android:textStyle="bold"
        android:textColor="@color/neutral6"
        />

    <EditText
        android:id="@+id/ediOldPassChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:autofillHints="old password"
        android:background="@drawable/custom_edi"
        android:hint="@string/old_pass"
        android:inputType="text"
        android:padding="@dimen/dp16"
        android:layout_marginHorizontal="@dimen/dp12"
        android:textColor="@color/neutral1"
        android:textColorHint="@color/neutral3"
        android:textSize="@dimen/sp16" />

    <EditText
        android:id="@+id/ediNewPassChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:layout_marginHorizontal="@dimen/dp12"
        android:autofillHints="new password"
        android:background="@drawable/custom_edi"
        android:hint="@string/new_pass"
        android:inputType="text"
        android:layout_below="@+id/ediOldPassChange"
        android:padding="@dimen/dp16"
        android:textColor="@color/neutral1"
        android:textColorHint="@color/neutral3"
        android:textSize="@dimen/sp16" />


    <EditText
        android:id="@+id/ediNameChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:layout_marginHorizontal="@dimen/dp12"
        android:autofillHints="name"
        android:background="@drawable/custom_edi"
        android:hint="@string/name2"
        android:inputType="textPersonName"
        android:padding="@dimen/dp16"
        android:textColor="@color/neutral1"
        android:textColorHint="@color/neutral3"
        android:textSize="@dimen/sp16" />


    <EditText
        android:id="@+id/ediAgeChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp12"
        android:layout_marginTop="@dimen/dp12"
        android:autofillHints="age"
        android:background="@drawable/custom_edi"
        android:hint="@string/age2"
        android:inputType="number"
        android:padding="@dimen/dp16"
        android:textColor="@color/neutral1"
        android:textColorHint="@color/neutral3"
        android:textSize="@dimen/sp16" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp12"
        android:background="@drawable/button"
        android:paddingHorizontal="@dimen/dp12"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/neutral6"
        android:textSize="@dimen/sp16"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butBack2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp12"
        android:background="@drawable/danger_button"
        android:paddingHorizontal="@dimen/dp12"
        android:layout_marginTop="@dimen/dp12"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/neutral6"
        android:textSize="@dimen/sp16"
        android:textStyle="normal" />
</LinearLayout>