<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:padding="@dimen/dp16"
        android:id="@+id/layoutSub"
        android:background="@drawable/custom_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/dp16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="@dimen/dp10"
            android:text="@string/login"
            android:textColor="@color/neutral1"
            android:textSize="@dimen/sp35" />

        <EditText
            android:id="@+id/ediUsernameMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewLogin"
            android:layout_marginTop="@dimen/dp12"
            android:autofillHints="username"
            android:background="@drawable/custom_edi"
            android:drawableStart="@drawable/user"
            android:drawablePadding="@dimen/dp8"
            android:hint="@string/username"
            android:textColorHint="@color/neutral3"
            android:inputType="text"
            android:textColor="@color/black"
            android:padding="@dimen/dp16"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/ediPasswordMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ediUsernameMain"
            android:layout_marginTop="@dimen/dp20"
            android:autofillHints="password"
            android:background="@drawable/custom_edi"
            android:textColorHint="@color/neutral3"
            android:drawableStart="@drawable/key"
            android:drawablePadding="@dimen/dp8"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:letterSpacing="0.0"
            android:textColor="@color/black"
            android:padding="@dimen/dp16"
            android:textSize="@dimen/dp16" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butLogInMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ediPasswordMain"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/neutral6"
            android:textSize="@dimen/sp14"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/butLogInMain"
            android:layout_marginStart="@dimen/dp110"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/new_user"
            android:textSize="@dimen/sp14" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/butLogInMain"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp5"
            android:layout_toEndOf="@id/textViewNewUser"
            android:paddingStart="@dimen/dp8"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:textSize="@dimen/sp14" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>